# kafka-study

./: .gitignore  Makefile  Makefile.CoinGenko  Makefile.Confluent  Makefile.Connect  Makefile.EventReceiver  Makefile.Glue  Makefile.Ksql  Makefile.Protobuf  Makefile.SchemaRegistry  Makefile.Seeds  README.md  docker-compose.seeds.yml  docker-compose.yml  event_generator.py
apps/: Dockerfile  avro-example-producer.py  coin-gecko-to-kafka.py  consumer.py  requirements.txt  setup.py
apps/commons/: __init__.py  config.py
apps/examples/: basic-admin.py  basic-consumer.py  faker-example.py
connect/: Dockerfile  kafka-to-pg.json  kafka-to-s3-with-schema.json  kafka-to-s3.json
connect/sink/: avro-to-pg.json  avro-to-s3.json  json-to-s3.json  kafka-avro-to-s3-parquet-glue.json  kafka-avro-to-s3-parquet.json  kafka-json-to-s3-parquet.json
connector/: kafka-to-pg.json  kafka-to-s3.json
event-receiver/: Dockerfile  app.py  client.py  pyproject.toml
event-receiver/config/: kafka.py
event-receiver/events/movie_streaming/: v1-movie-streaming.json  v2-movie-streaming.json  v3-movie-streaming.json
event-receiver/events/user_login/: v1-user-login.json  v2-user-login.json  v3-user-login.json
event-receiver/services/: publisher_with_confluent_schema_register.py  publisher_with_glue_schema_register_publisher.py
infra/: Makefile
infra/terraform/: .gitignore  0-input.tf  0-main.tf  1-network.tf  2-vpn-endpoint.tf  20-output.tf  3-msk.tf  4-get-vpn-config.tf  5-data-crawlers.tf  6-test-instances.tf  7-api.tf  8-dataviz.tf  main.tf
ksql/: ksql.sql
metabase/: Dockerfile
(+46 files in other folders)
