[tool.poetry]
name = "event-receiver"
version = "0.1.0"
description = ""
authors = ["Luiz Zamboni <luizamboni2002@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
avro-model = {git = "https://github.com/luizamboni/avro_model.git", rev = "v0.1.0-alpha"}
flask = "^3.0.3"
confluent-kafka = "^2.4.0"
requests = "^2.32.3"
aws-glue-schema-registry = "^1.1.3"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
